# ColossalAI_TEST

./: .dockerignore  .flake8  .gitignore  pyproject.toml  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: development.md
.github/workflows/: lint-and-test.yaml
config/: __init__.py  argment.py  config.py
environments/gpu/: docker-compose.yaml
src/: __init__.py  utils.py
